case-study/caseStudy-ingress/apache2_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: apache2
  labels:
    app: apache2
spec:
  replicas: 2
  selector: 
   matchLabels:
     app: my-apache2
  template:
    metadata: 
       name: my-pod
       labels:
         app: my-apache2
    spec:
      containers:
         - name: apache-cont
           image: httpd
           ports:
             - containerPort: 8080
