case-study/caseStudy-ingress/apache_service.yml
apiVersion: v1 
kind: Service
metadata:
  name: apache2-svc
  labels:
    app: apache2
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
       app: apache2
