case-study/caseStudy-ingress/custom_service.yml
apiVersion: v1 
kind: Service
metadata:
  name: custom-svc
  labels:
    app: custom-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
       app: customwebsite
