case-study/caseStudy-ingress/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress-rule
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /apache
          pathType: Prefix
          backend:
            service:
              name: apache2-svc
              port:
                number: 80
        - path: /custom
          pathType: Prefix
          backend:
            service:
              name: custom-svc
              port:
                number: 80
